Fix HTML formatting issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ol>
       <li>Where the Pyramids were built</li>
       <li>Where religions were founded</li>
-      <li>Where quantum mechanics were discovered</li>
+      <li>Where quantum mechanics was discovered</li>
     </ol>
     <p>
       For more information click
@@ -27,3 +27,4 @@
     <button>Change user</button>
   </body>
 </html>
+
